@@ -6,6 +6,7 @@ Version 0.6
  logger: Only create database columns, and only try to log, supported pids
  logger: add serial port logging option
  cmake: default gps dev [for ui] separately compile-time configurable
+ logger: Dbus support, announce obd samples using SYSTEM dbus
 
 Version 0.5 (released 2009-05-22)
  Move common obdinfo into its own library
